using UnityEngine;
using System.Collections;
using System.Collections.Generic;

[RequireComponent(typeof(Rigidbody2D))] 
public class NPCController : MonoBehaviour
{
    private Rigidbody2D rb;
    private TilePathfinder pathfinder;
    
    // ğŸš¨ YENÄ°: Animator bileÅŸeni referansÄ±
    private Animator animator; 


    [Header("Hareket AyarlarÄ±")]
    [SerializeField] private float moveSpeed = 3f; 
    [SerializeField] private float stopDistance = 0.05f; 


    [Header("DuruÅŸ AyarlarÄ±")]
    [Tooltip("NPC'nin NÄ°HAÄ° hedefine ulaÅŸtÄ±ktan sonra, yeni hedef seÃ§ilmeden Ã¶nce bekleyeceÄŸi sÃ¼re (saniye).")]
    [SerializeField] private float finalPauseDuration = 1.0f; // Nihai duruÅŸ gecikmesi


    private List<Vector3> currentPath = new List<Vector3>();
    private int currentPathIndex = 0;


    private void Awake()
    {
        rb = GetComponent<Rigidbody2D>();
        rb.gravityScale = 0;
        rb.freezeRotation = true;
        
        // ğŸš¨ YENÄ°: Animator bileÅŸenini al
        animator = GetComponent<Animator>(); 


        pathfinder = FindObjectOfType<TilePathfinder>(); 
        if (pathfinder == null) Debug.LogError("Sahneye TilePathfinder ekleyin!");
    }


    private void OnEnable()
    {
        if (GameManager.Instance != null)
        {
            GameManager.Instance.OnNPCWalkToLocation += StartMovementTo;
        }
    }


    private void OnDisable()
    {
        if (GameManager.Instance != null)
        {
            GameManager.Instance.OnNPCWalkToLocation -= StartMovementTo;
        }
    }


    public void StartMovementTo(Vector3 targetWorldPosition)
    {
        StopAllCoroutines(); 

        // Not: Burada FindPath'in 2 parametreli versiyonu kullanÄ±lÄ±yor.
        currentPath = pathfinder.FindPath(transform.position, targetWorldPosition); 
        currentPathIndex = 0;

        if (currentPath.Count > 0)
        {
            StartCoroutine(FollowPathCoroutine());
        }
        else
        {
            Debug.LogWarning("Yol bulunamadÄ±! Engel veya Tilemap ayarlarÄ±nÄ± kontrol edin.");
            if (GameManager.Instance != null)
            {
                GameManager.Instance.isNPCMoving = false;
            }
        }
    }


    private IEnumerator FollowPathCoroutine()
    {
        // 1. Ara NoktalarÄ± Takip Et
        
        // ğŸš¨ YENÄ°: YÃ¼rÃ¼meyi baÅŸlat
        if (animator != null)
        {
            animator.SetBool("IsMoving", true);
        }

        while (currentPathIndex < currentPath.Count)
        {
            Vector3 targetPosition = currentPath[currentPathIndex];
            
            yield return StartCoroutine(MoveToSingleTarget(targetPosition));
            
            currentPathIndex++;
        }
        
        Debug.Log("NPC nihai hedefe ulaÅŸtÄ±. Yeni hedef seÃ§imi iÃ§in bekleniyor...");
        
        // ğŸš¨ YENÄ°: Hedefe ulaÅŸÄ±lÄ±nca animasyonu durdur
        if (animator != null)
        {
            animator.SetBool("isMoving", false);
            // DurduÄŸu yÃ¶ne bakmasÄ± iÃ§in son yÃ¶n deÄŸerleri korunur
        }
        
        // NÄ°HAÄ° HEDEF GECÄ°KMESÄ°
        yield return new WaitForSeconds(finalPauseDuration); 
        
        // Ä°ÅŸlem TamamlandÄ± Bildirimi
        if (GameManager.Instance != null)
        {
            GameManager.Instance.isNPCMoving = false; 
        }

    }


    private IEnumerator MoveToSingleTarget(Vector3 targetPosition)
    {
        // 1. Hedefe yÃ¼rÃ¼me dÃ¶ngÃ¼sÃ¼
        while (Vector3.Distance(transform.position, targetPosition) > stopDistance) 
        {
            Vector2 direction = (targetPosition - transform.position).normalized;
            
            // ğŸš¨ ANÄ°MASYON GÃœNCELLEME: YÃ¼rÃ¼me yÃ¶nÃ¼nÃ¼ Animator'a gÃ¶nder
            if (animator != null)
            {
                 animator.SetFloat("moveX", direction.x);
                 animator.SetFloat("moveY", direction.y);
            }
            
            // HAREKET KODU (Orijinal haliyle bÄ±rakÄ±ldÄ±)
            rb.linearVelocity = direction * moveSpeed; 
            rb.MovePosition(rb.position + direction * moveSpeed * Time.deltaTime); 
            yield return null;
        }
        
        // 2. Hedefe ulaÅŸÄ±ldÄ±
        rb.linearVelocity = Vector2.zero; // AnÄ±nda durdur
        transform.position = targetPosition; // Hedefe tam kilitleme

        // Bu bir ara nokta olduÄŸu iÃ§in burada bekleme YOK.
    }
}